# Vectorpenter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GCP_SETUP.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-ENFORCEMENT.md  MACHINECRAFT_AGENTS.md  MACHINECRAFT_ARCHITECTURE.md  MASCOT.md  MCP_SETUP.md  Makefile  NEW_ENV_EXAMPLE.md  PRICING.md  README.md  README_BEAUTIFUL.md  README_TECHNICAL.md  SECURITY.md  VECTORPENTER_SKELETON.md  VISUAL_GUIDE.md  VP_MASCOT.md  VP_STORY.md  VP_TEMPLATE_GUIDE.md  __init__.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial_inquiry.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
agents/: __init__.py  vp_sales.py
apps/: __init__.py  admin.py  api.py  cli.py  cursor_chat.py  eval.py
core/: __init__.py  audit.py  auth.py  cache.py  config.py  logging.py  monitoring.py  resilience.py  schemas.py  validation.py
creds/: .gitkeep
data/cache/: .gitkeep
data/eval/: .gitkeep  questions.json
data/inputs/: .gitkeep
gcp/: __init__.py  docai.py  gcs.py  search.py  translation.py  vertex.py
index/: __init__.py  embedder.py  pinecone_client.py  upsert.py
ingest/: __init__.py  chunkers.py  loaders.py  parsers.py  pipeline.py
mcp/: __init__.py  vp_server.py
rag/: __init__.py  context_builder.py  generator.py  reranker.py  retriever.py
search/: __init__.py  hybrid.py  typesense_client.py
state/: __init__.py  db.py  memory.py  models.sql
tests/: __init__.py  smoke_test.py  test_workflows.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_reranker.py  test_retriever.py
tools/: __init__.py  crawler.py  gmail.py  ocr.py  screenshotone.py
