[project]
name = "vectorpenter"
version = "0.1.0"
description = "Vectorpenter — The carpenter of context: building vectors into memory."
authors = [{ name = "Machinecraft Technologies", email = "info@machinecraft.tech" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["apps", "core", "ingest", "index", "rag", "search", "state", "tools"]

[project.scripts]
vectorpenter = "apps.cli:main"
